--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,8 +1,69 @@
-.card {
+.front-page {
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-wrap {
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+  background-color: white;
   border-radius: 4px;
   margin: 1em;
   padding: 1em;
+  width: 50%;
   max-width: 650px;
   text-rendering: optimizeLegibility;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin-right: 1em;
+  list-style: none;
+}
+
+.social-icons li:last-of-type {
+  margin-right: 0;
+}
+
+.social-icons li a {
+  color: rgb(103, 114, 229);
+  text-decoration: none;
+  font-size: 24px;
+}
+
+#background {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 45vh;
+  height: 2000px;
+  background: #f6f9fc;
+  transform: skew(0, -12deg);
+  z-index: -1;
+}
+
+.blue-button {
+  background-color: rgb(103, 114, 229);
+  color: white;
+}
+
+.white-button {
+  color: #555abf;
+  background-color: white;
+}
+
+.button {
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  height: 40px;
+  line-height: 40px;
+  padding: 0 14px;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  transition: all 0.15s ease;
 }
