--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,15 +10,17 @@
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
   background-color: white;
   border-radius: 4px;
-  margin: 1em;
-  padding: 1em;
-  width: 90%;
-  max-width: 750px;
+  /* margin: 1em; */
+  padding: 40px;
+  /* width: 90%; */
+  max-width: 960px;
   text-rendering: optimizeLegibility;
+  display: flex;
 }
 
 .content {
-  display: flex;
+  text-align: center;
+  margin-left: 40px;
 }
 
 .social-icons li {
@@ -70,4 +72,8 @@
   text-transform: uppercase;
   letter-spacing: 0.025em;
   transition: all 0.15s ease;
+}
+
+.nav-menu {
+  list-style: none;
 }
