--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,9 +10,7 @@
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
   background-color: white;
   border-radius: 4px;
-  /* margin: 1em; */
   padding: 40px;
-  /* width: 90%; */
   max-width: 960px;
   text-rendering: optimizeLegibility;
   display: flex;
@@ -21,6 +19,9 @@
 .content {
   text-align: center;
   margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .social-icons li {
@@ -111,4 +112,8 @@
 
 .nav-menu li {
   margin-left: 40px;
+}
+
+ul {
+  margin-left: 0;
 }
